# top100

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  NOTICE  README-image-export.md  README.md  THIRD-PARTY-NOTICES.md  top100.json
.github/workflows/: ci.yml  docs.yml  release.yml
cli/: addfromomdb.cpp  addfromomdb.h  addmovie.cpp  addmovie.h  comparemovies.cpp  comparemovies.h  displaymenu.cpp  displaymenu.h  dup_policy.h  listmovies.cpp  listmovies.h  main.cpp  main.h  removemovie.cpp  removemovie.h  viewdetails.cpp  viewdetails.h
docker/: Dockerfile.base-dev  Dockerfile.haiku-cross  README.md  haiku-buildtools.sh
lib/: Movie.h  bluesky.cpp  bluesky.h  config.cpp  config.h  config_utils.cpp  config_utils.h  image_export.cpp  image_export.h  image_export_stub.cpp  mastodon.cpp  mastodon.h  omdb.cpp  omdb.h  posting.cpp  posting.h  top100.cpp  top100.h
tests/: test_config.cpp  test_config_utils.cpp  test_core.cpp  test_find_replace.cpp  test_menu.cpp  test_movie_json.cpp  test_ranking.cpp  test_sorting.cpp  test_sqlite_backend.cpp  test_top100.cpp  test_ui_constants.cpp  test_ui_strings.cpp
ui/android/: main.cpp  resources.qrc
ui/android/qml/: AndroidMain.qml
ui/common/: Top100ListModel.cpp  Top100ListModel.h  constants.h  strings.h
ui/gtk/: adddialog.cpp  adddialog.h  app.cpp  app.h  handlers.cpp  handlers.h  main.cpp  menu.cpp  menu.h  poster.cpp  poster.h  rankdialog.cpp  rankdialog.h  toolbar.cpp  toolbar.h  window.cpp  window.h
ui/haiku/: add_dialog.cpp  add_dialog.h  app.cpp  app.h  window.cpp  window.h
ui/kde/: main.cpp  resources.qrc
ui/kde/qml/: Main.qml
ui/qt/: adddialog.cpp  adddialog.h  app.cpp  app.h  handlers.cpp  handlers.h  main.cpp  menu.cpp  menu.h  poster.cpp  poster.h  rankdialog.cpp  rankdialog.h  spinner.cpp  spinner.h  toolbar.cpp  toolbar.h  window.cpp  window.h
